# amiberry-psc

./: CMakeLists.txt  Makefile  compileme
autobleem/: run.sh
conf/: amiberry.conf
src/: blkdev_cdimage.cpp  devices.cpp  drawing.cpp  expansion.cpp
src/osdep/: amiberry.cpp  amiberry_input.cpp
src/osdep/gui/: PanelAbout.cpp  PanelMisc.cpp  PanelPaths.cpp  PanelSavestate.cpp  main_window.cpp
