cmake_minimum_required(VERSION 3.14)
project(amiberry_psc)

set(CMAKE_CXX_STANDARD 14)

include_directories(src/archivers/7z)
include_directories(src/archivers/dms)
include_directories(src/archivers/lha)
include_directories(src/archivers/mp2)
include_directories(src/archivers/wrp)
include_directories(src/archivers/zip)
include_directories(src/caps)
include_directories(src/include)
include_directories(src/include/uae)
include_directories(src/jit)
include_directories(src/machdep)
include_directories(src/osdep)
include_directories(src/osdep/gui)
include_directories(src/osdep/psp2)
include_directories(src/osdep/psp2/vita-shader-collection)
include_directories(src/osdep/psp2/vita-shader-collection/includes)
include_directories(src/osdep/psp2/vita2d_fbo)
include_directories(src/osdep/psp2/vita2d_fbo/includes)
include_directories(src/osdep/switch)
include_directories(src/osdep/vkbd)
include_directories(src/sounddep)
include_directories(src/threaddep)

add_executable(amiberry_psc
        src/archivers/7z/7z.h
        src/archivers/7z/7zAlloc.cpp
        src/archivers/7z/7zAlloc.h
        src/archivers/7z/7zBuf.cpp
        src/archivers/7z/7zBuf.h
        src/archivers/7z/7zBuf2.c
        src/archivers/7z/7zCrc.cpp
        src/archivers/7z/7zCrc.h
        src/archivers/7z/7zCrcOpt.cpp
        src/archivers/7z/7zDec.cpp
        src/archivers/7z/7zFile.c
        src/archivers/7z/7zFile.h
        src/archivers/7z/7zIn.cpp
        src/archivers/7z/7zStream.cpp
        src/archivers/7z/7zVersion.h
        src/archivers/7z/Alloc.c
        src/archivers/7z/Alloc.h
        src/archivers/7z/Bcj2.cpp
        src/archivers/7z/Bcj2.h
        src/archivers/7z/Bra.cpp
        src/archivers/7z/Bra.h
        src/archivers/7z/Bra86.cpp
        src/archivers/7z/BraIA64.c
        src/archivers/7z/CpuArch.c
        src/archivers/7z/CpuArch.h
        src/archivers/7z/Delta.c
        src/archivers/7z/Delta.h
        src/archivers/7z/LzFind.cpp
        src/archivers/7z/LzFind.h
        src/archivers/7z/LzHash.h
        src/archivers/7z/Lzma2Dec.cpp
        src/archivers/7z/Lzma2Dec.h
        src/archivers/7z/Lzma86.h
        src/archivers/7z/Lzma86Dec.c
        src/archivers/7z/LzmaDec.cpp
        src/archivers/7z/LzmaDec.h
        src/archivers/7z/LzmaEnc.h
        src/archivers/7z/LzmaLib.c
        src/archivers/7z/LzmaLib.h
        src/archivers/7z/Ppmd.h
        src/archivers/7z/Ppmd7.c
        src/archivers/7z/Ppmd7.h
        src/archivers/7z/Ppmd7Dec.c
        src/archivers/7z/Ppmd7Enc.c
        src/archivers/7z/RotateDefs.h
        src/archivers/7z/Sha256.c
        src/archivers/7z/Sha256.h
        src/archivers/7z/Types.h
        src/archivers/7z/Xz.cpp
        src/archivers/7z/Xz.h
        src/archivers/7z/XzCrc64.c
        src/archivers/7z/XzCrc64.h
        src/archivers/7z/XzDec.c
        src/archivers/7z/XzIn.c
        src/archivers/dms/cdata.h
        src/archivers/dms/crc_csum.cpp
        src/archivers/dms/crc_csum.h
        src/archivers/dms/getbits.cpp
        src/archivers/dms/getbits.h
        src/archivers/dms/maketbl.cpp
        src/archivers/dms/maketbl.h
        src/archivers/dms/pfile.cpp
        src/archivers/dms/pfile.h
        src/archivers/dms/tables.cpp
        src/archivers/dms/tables.h
        src/archivers/dms/u_deep.cpp
        src/archivers/dms/u_deep.h
        src/archivers/dms/u_heavy.cpp
        src/archivers/dms/u_heavy.h
        src/archivers/dms/u_init.cpp
        src/archivers/dms/u_init.h
        src/archivers/dms/u_medium.cpp
        src/archivers/dms/u_medium.h
        src/archivers/dms/u_quick.cpp
        src/archivers/dms/u_quick.h
        src/archivers/dms/u_rle.cpp
        src/archivers/dms/u_rle.h
        src/archivers/lha/crcio.cpp
        src/archivers/lha/dhuf.cpp
        src/archivers/lha/header.cpp
        src/archivers/lha/huf.cpp
        src/archivers/lha/larc.cpp
        src/archivers/lha/lha.h
        src/archivers/lha/lha_macro.h
        src/archivers/lha/lhamaketbl.cpp
        src/archivers/lha/lharc.cpp
        src/archivers/lha/shuf.cpp
        src/archivers/lha/slide.cpp
        src/archivers/lha/uae_lha.cpp
        src/archivers/lha/util.cpp
        src/archivers/lzx/unlzx.cpp
        src/archivers/mp2/kjmp2.cpp
        src/archivers/mp2/kjmp2.h
        src/archivers/wrp/warp.cpp
        src/archivers/wrp/warp.h
        src/archivers/zip/unzip.cpp
        src/archivers/zip/unzip.h
        src/caps/caps_amiberry.cpp
        src/caps/CapsAPI.h
        src/caps/Comtype.h
        src/include/uae/caps.h
        src/include/uae/dlopen.h
        src/include/uae/likely.h
        src/include/uae/mman.h
        src/include/uae/string.h
        src/include/uae/types.h
        src/include/uae/uae.h
        src/include/akiko.h
        src/include/ar.h
        src/include/audio.h
        src/include/autoconf.h
        src/include/blit.h
        src/include/blitfunc.h
        src/include/blitter.h
        src/include/blkdev.h
        src/include/bsdsocket.h
        src/include/calc.h
        src/include/cd32_fmv.h
        src/include/cia.h
        src/include/commpipe.h
        src/include/cpu_prefetch.h
        src/include/cpummu.h
        src/include/cputbl.h
        src/include/crc32.h
        src/include/custom.h
        src/include/devices.h
        src/include/disk.h
        src/include/diskutil.h
        src/include/drawing.h
        src/include/events.h
        src/include/execio.h
        src/include/execlib.h
        src/include/fdi2raw.h
        src/include/filesys.h
        src/include/flags_arm.h
        src/include/flashrom.h
        src/include/fpp.h
        src/include/fsdb.h
        src/include/fsusage.h
        src/include/gayle.h
        src/include/gensound.h
        src/include/gfxboard.h
        src/include/gui.h
        src/include/ide.h
        src/include/inputdevice.h
        src/include/keyboard.h
        src/include/keybuf.h
        src/include/memory.h
        src/include/mmu_common.h
        src/include/native2amiga.h
        src/include/native2amiga_api.h
        src/include/newcpu.h
        src/include/options.h
        src/include/readcpu.h
        src/include/rommgr.h
        src/include/rtc.h
        src/include/rtgmodes.h
        src/include/savestate.h
        src/include/scsi.h
        src/include/statusline.h
        src/include/sysdeps.h
        src/include/traps.h
        src/include/uae.h
        src/include/uaeresource.h
        src/include/xwin.h
        src/include/zarchive.h
        src/include/zfile.h
        src/jit/aarch64.h
        src/jit/codegen_arm.h
        src/jit/codegen_armA64.h
        src/jit/compemu.cpp
        src/jit/compemu.h
        src/jit/compemu_fpp.cpp
        src/jit/compemu_midfunc_arm.h
        src/jit/compemu_midfunc_arm2.h
        src/jit/compemu_support.cpp
        src/jit/compstbl.cpp
        src/jit/comptbl.h
        src/machdep/m68k.h
        src/machdep/maccess.h
        src/machdep/rpt.h
        src/machdep/support.cpp
        src/osdep/gui/androidsdl_event.cpp
        src/osdep/gui/androidsdl_event.h
        src/osdep/gui/CreateFilesysHardfile.cpp
        src/osdep/gui/EditFilesysHardfile.cpp
        src/osdep/gui/EditFilesysVirtual.cpp
        src/osdep/gui/gui_handling.h
        src/osdep/gui/InGameMessage.cpp
        src/osdep/gui/main_window.cpp
        src/osdep/gui/Navigation.cpp
        src/osdep/gui/PanelAbout.cpp
        src/osdep/gui/PanelChipset.cpp
        src/osdep/gui/PanelConfig.cpp
        src/osdep/gui/PanelCPU.cpp
        src/osdep/gui/PanelCustom.cpp
        src/osdep/gui/PanelDisplay.cpp
        src/osdep/gui/PanelFloppy.cpp
        src/osdep/gui/PanelHD.cpp
        src/osdep/gui/PanelInput.cpp
        src/osdep/gui/PanelMisc.cpp
        src/osdep/gui/PanelOnScreen.cpp
        src/osdep/gui/PanelPaths.cpp
        src/osdep/gui/PanelQuickstart.cpp
        src/osdep/gui/PanelRAM.cpp
        src/osdep/gui/PanelROM.cpp
        src/osdep/gui/PanelSavestate.cpp
        src/osdep/gui/PanelSound.cpp
        src/osdep/gui/sdltruetypefont.cpp
        src/osdep/gui/sdltruetypefont.hpp
        src/osdep/gui/SelectFile.cpp
        src/osdep/gui/SelectFolder.cpp
        src/osdep/gui/SelectorEntry.cpp
        src/osdep/gui/SelectorEntry.hpp
        src/osdep/gui/ShowHelp.cpp
        src/osdep/gui/ShowMessage.cpp
        src/osdep/gui/UaeCheckBox.cpp
        src/osdep/gui/UaeCheckBox.hpp
        src/osdep/gui/UaeDropDown.cpp
        src/osdep/gui/UaeDropDown.hpp
        src/osdep/gui/UaeListBox.cpp
        src/osdep/gui/UaeListBox.hpp
        src/osdep/gui/UaeRadioButton.cpp
        src/osdep/gui/UaeRadioButton.hpp
        src/osdep/psp2/vita-shader-collection/includes/advanced_aa_f.h
        src/osdep/psp2/vita-shader-collection/includes/advanced_aa_v.h
        src/osdep/psp2/vita-shader-collection/includes/alpha_blend_f.h
        src/osdep/psp2/vita-shader-collection/includes/alpha_blend_v.h
        src/osdep/psp2/vita-shader-collection/includes/bicubic_f.h
        src/osdep/psp2/vita-shader-collection/includes/clear_f.h
        src/osdep/psp2/vita-shader-collection/includes/clear_v.h
        src/osdep/psp2/vita-shader-collection/includes/color_f.h
        src/osdep/psp2/vita-shader-collection/includes/color_v.h
        src/osdep/psp2/vita-shader-collection/includes/crt_easymode_f.h
        src/osdep/psp2/vita-shader-collection/includes/fxaa_f.h
        src/osdep/psp2/vita-shader-collection/includes/fxaa_v.h
        src/osdep/psp2/vita-shader-collection/includes/gtu_f.h
        src/osdep/psp2/vita-shader-collection/includes/gtu_v.h
        src/osdep/psp2/vita-shader-collection/includes/lcd3x_f.h
        src/osdep/psp2/vita-shader-collection/includes/lcd3x_v.h
        src/osdep/psp2/vita-shader-collection/includes/opaque_f.h
        src/osdep/psp2/vita-shader-collection/includes/opaque_v.h
        src/osdep/psp2/vita-shader-collection/includes/ribbon_f.h
        src/osdep/psp2/vita-shader-collection/includes/ribbon_simple_f.h
        src/osdep/psp2/vita-shader-collection/includes/ribbon_simple_v.h
        src/osdep/psp2/vita-shader-collection/includes/ribbon_v.h
        src/osdep/psp2/vita-shader-collection/includes/scale2x_f.h
        src/osdep/psp2/vita-shader-collection/includes/scale2x_v.h
        src/osdep/psp2/vita-shader-collection/includes/sharp_bilinear_f.h
        src/osdep/psp2/vita-shader-collection/includes/sharp_bilinear_simple_f.h
        src/osdep/psp2/vita-shader-collection/includes/sharp_bilinear_simple_v.h
        src/osdep/psp2/vita-shader-collection/includes/sharp_bilinear_v.h
        src/osdep/psp2/vita-shader-collection/includes/texture_f.h
        src/osdep/psp2/vita-shader-collection/includes/texture_tint_f.h
        src/osdep/psp2/vita-shader-collection/includes/texture_v.h
        src/osdep/psp2/vita-shader-collection/includes/xbr_2x_f.h
        src/osdep/psp2/vita-shader-collection/includes/xbr_2x_fast_f.h
        src/osdep/psp2/vita-shader-collection/includes/xbr_2x_fast_v.h
        src/osdep/psp2/vita-shader-collection/includes/xbr_2x_noblend_f.h
        src/osdep/psp2/vita-shader-collection/includes/xbr_2x_noblend_v.h
        src/osdep/psp2/vita-shader-collection/includes/xbr_2x_v.h
        src/osdep/psp2/vita2d_fbo/includes/vita2d.h
        src/osdep/psp2/psp2-dirent.c
        src/osdep/psp2/psp2-dirent.h
        src/osdep/psp2/psp2_input.c
        src/osdep/psp2/psp2_input.h
        src/osdep/psp2/psp2_shader.cpp
        src/osdep/psp2/psp2_shader.h
        src/osdep/psp2/psp2_touch.c
        src/osdep/psp2/psp2_touch.h
        src/osdep/switch/sdl2_to_sdl1.cpp
        src/osdep/switch/sdl2_to_sdl1.h
        src/osdep/switch/switch_touch.c
        src/osdep/switch/switch_touch.h
        src/osdep/vkbd/vkbd.cpp
        src/osdep/vkbd/vkbd.h
        src/osdep/amiberry.cpp
        src/osdep/amiberry_filesys.cpp
        src/osdep/amiberry_gfx.cpp
        src/osdep/amiberry_gfx.h
        src/osdep/amiberry_gui.cpp
        src/osdep/amiberry_hardfile.cpp
        src/osdep/amiberry_input.cpp
        src/osdep/amiberry_mem.cpp
        src/osdep/amiberry_rp9.cpp
        src/osdep/amiberry_rp9.h
        src/osdep/amiberry_whdbooter.cpp
        src/osdep/bsdsocket_host.cpp
        src/osdep/cda_play.cpp
        src/osdep/cda_play.h
        src/osdep/charset.cpp
        src/osdep/config.h
        src/osdep/fsdb_host.cpp
        src/osdep/keyboard.cpp
        src/osdep/mp3decoder.cpp
        src/osdep/mp3decoder.h
        src/osdep/picasso96.cpp
        src/osdep/picasso96.h
        src/osdep/sigsegv_handler.cpp
        src/osdep/sysconfig.h
        src/osdep/target.h
        src/osdep/writelog.cpp
        src/sounddep/sound.cpp
        src/sounddep/sound.h
        src/threaddep/thread.h
        src/akiko.cpp
        src/ar.cpp
        src/aros.rom.cpp
        src/audio.cpp
        src/autoconf.cpp
        src/blitfunc.cpp
        src/blittable.cpp
        src/blitter.cpp
        src/blkdev.cpp
        src/blkdev_cdimage.cpp
        src/bsdsocket.cpp
        src/calc.cpp
        src/cd32_fmv.cpp
        src/cd32_fmv_genlock.cpp
        src/cdrom.cpp
        src/cfgfile.cpp
        src/cia.cpp
        src/cpudefs.cpp
        src/cpuemu_0.cpp
        src/cpuemu_11.cpp
        src/cpuemu_4.cpp
        src/cpuemu_40.cpp
        src/cpuemu_44.cpp
        src/cpustbl.cpp
        src/crc32.cpp
        src/custom.cpp
        src/devices.cpp
        src/disk.cpp
        src/diskutil.cpp
        src/dlopen.cpp
        src/drawing.cpp
        src/events.cpp
        src/expansion.cpp
        src/fdi2raw.cpp
        src/filesys.cpp
        src/flashrom.cpp
        src/fpp.cpp
        src/fsdb.cpp
        src/fsdb_unix.cpp
        src/fsusage.cpp
        src/gayle.cpp
        src/gfxboard.cpp
        src/gfxutil.cpp
        src/hardfile.cpp
        src/hrtmon.rom.cpp
        src/ide.cpp
        src/inputdevice.cpp
        src/keybuf.cpp
        src/main.cpp
        src/memory.cpp
        src/native2amiga.cpp
        src/newcpu.cpp
        src/newcpu_common.cpp
        src/readcpu.cpp
        src/rommgr.cpp
        src/rtc.cpp
        src/savestate.cpp
        src/scsi.cpp
        src/statusline.cpp
        src/traps.cpp
        src/uaelib.cpp
        src/uaeresource.cpp
        src/zfile.cpp
        src/zfile_archive.cpp
      )
